style home page

--- a/index.html
+++ b/index.html
@@ -1,52 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Danielle Dawson - Portfolio</title>
-    <link rel="stylesheet" href="styles/main.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/main.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="northcoders.html">Northcoders</a></li>
-            </ul>
-        </nav>
-        <div class="header-content">
-            <h1>Danielle Dawson</h1>
-            <h2>Junior Full-Stack Software Developer</h2>
-        </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="northcoders.html">Northcoders</a></li>
+        </ul>
+      </nav>
+      <div class="header-content">
+        <h1>Danielle Dawson</h1>
+        <h2>Junior Full-Stack Software Developer</h2>
+      </div>
     </header>
     <main>
-        <section class="grid-container">
-            <div class="grid-item item1">
-                <a href="projects.html">
-                    <h3>Projects</h3>
-                </a>
-            </div>
-            <div class="grid-item item2">
-                <a href="about.html">
-                    <h3>About Me</h3>
-                </a>
-            </div>
-            <div class="grid-item item3">
-                <a href="northcoders.html">
-                    <h3>Northcoders</h3>
-                </a>
-            </div>
-            <div class="grid-item item4">
-                <h3>More Info</h3>
-                <div class="additional-info">
-                    <p>I’m a passionate junior developer who recently graduated from Northcoders' intense bootcamp, where I honed my full-stack skills. With a background in mathematics and a self-taught start in Python, I've grown into a versatile coder. I love solving problems and working with others, bringing a positive attitude and a drive to keep learning. I'm excited to contribute my skills and enthusiasm to a great team!</p>
-                </div>
-            </div>
-            
-        </section>
+      <section class="grid-container">
+        <div class="grid-item item1">
+          <a href="projects.html">
+            <h3>Projects</h3>
+          </a>
+        </div>
+        <div class="grid-item item2">
+          <a href="about.html">
+            <h3>About Me</h3>
+          </a>
+        </div>
+        <div class="grid-item item3">
+          <a href="northcoders.html">
+            <h3>Northcoders</h3>
+          </a>
+        </div>
+        <div class="grid-item item4">
+          <h3>More Info</h3>
+          <div class="additional-info">
+            <p>
+              I'm a freshly minted Junior software developer with the debugging
+              skills of a caffeine-fueled owl and the inquisitive nature of Mr.
+              Bean on his way to Cannes. Coding has become my greatest passion,
+              transforming my life in ways I never imagined. Embarking on this
+              journey has been nothing short of life-changing.
+            </p>
+            <br />
+            <p>
+              Outside of coding, I've developed strong empathy, patience, and
+              organizational skills through various life experiences. When I’m
+              not buried in code, you’ll find me dancing (I’m a Grade 8
+              ballerina and ISTD certified tapper!), painting masterpieces, or
+              trying to solve problems faster than they can create themselves. I
+              thrive on creativity and positivity, and I’m excited to bring this
+              energy into a junior developer role. Let's create something
+              amazing together!
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="scripts/main.js"></script>
-</body>
+  </body>
 </html>
