dynamically render header and footer on every page

--- a/index.html
+++ b/index.html
@@ -13,20 +13,7 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="northcoders.html">Northcoders</a></li>
-        </ul>
-      </nav>
-      <div class="header-content">
-        <h1>Danielle Dawson</h1>
-        <h2>Junior Full-Stack Software Developer</h2>
-      </div>
-    </header>
+    <header></header>
     <main>
       <section class="grid-container">
         <div class="grid-item item1">
@@ -69,6 +56,8 @@
         </div>
       </section>
     </main>
+    <script src="scripts/loadHeaderFooter.js"></script>
     <script src="scripts/main.js"></script>
   </body>
+  <footer></footer>
 </html>
