add content to northcoders page

--- a/northcoders.html
+++ b/northcoders.html
@@ -5,9 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Danielle Dawson - Northcoders</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/article.css" />
   </head>
   <body>
     <header></header>
+    <main>
+      <article>
+        <header>
+          <h1>My Northcoders Journey</h1>
+        </header>
+        <p>
+          I recently completed the 13-week Full-Stack Software Development
+          Bootcamp at Northcoders, a program that has truly transformed my
+          approach to coding and problem-solving. Northcoders is renowned for
+          its intensive, hands-on approach to learning, and the bootcamp did not
+          disappoint. Over the course of the program, I immersed myself in both
+          front-end and back-end development, mastering technologies like
+          JavaScript, React, HTML, CSS, Node.js, Express, and SQL.
+        </p>
+        <p>
+          The curriculum at Northcoders is meticulously designed to push
+          students beyond their limits, encouraging the development of not just
+          technical skills, but also the critical soft skills necessary for
+          success in the tech industry. Through daily coding challenges,
+          collaborative projects, and pair-programming sessions, I honed my
+          ability to think algorithmically and solve complex problems
+          efficiently. The course’s emphasis on agile methodologies and
+          real-world project work ensured that I left with a deep understanding
+          of what it takes to succeed in a fast-paced development environment.
+        </p>
+        <p>
+          One of the most impactful aspects of the bootcamp was the focus on
+          practical, hands-on learning. From the very beginning, I was building
+          full-stack applications that were not just functional but also
+          responsive and user-friendly. This practical experience was
+          complemented by a supportive community of instructors and peers, all
+          dedicated to helping each other succeed. The collaborative environment
+          at Northcoders fostered a strong sense of camaraderie, making each
+          coding challenge an opportunity to learn, grow, and innovate alongside
+          some truly talented individuals.
+        </p>
+        <p>
+          The Northcoders bootcamp didn’t just teach me how to code; it equipped
+          me with the confidence and skills to step into the tech industry as a
+          competent, creative, and resourceful developer. The experience has
+          left me eager to continue learning, to tackle new challenges, and to
+          contribute meaningfully to any team I’m a part of.
+        </p>
+      </article>
+    </main>
+
     <footer></footer>
     <script src="scripts/loadHeaderFooter.js"></script>
   </body>
