add content and style about.html

--- a/about.html
+++ b/about.html
@@ -5,9 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Danielle Dawson - About Me</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/article.css" />
   </head>
   <body>
     <header></header>
+    <main>
+      <article>
+        <header><h2>About Me</h2></header>
+
+        <p>
+          My journey into software development began at a time when I was
+          searching for direction after a significant personal loss. Determined
+          to find something that resonated deeply with me, I discovered
+          coding—and what started as a curiosity quickly grew into a passion
+          that provided both a challenge and a sense of purpose. Coding became
+          more than just a skill; it became a way to channel my energy into
+          something constructive and meaningful.
+        </p>
+        <p>
+          What excites me most about coding is the moment when I finally solve a
+          problem that initially seemed insurmountable. It's a powerful reminder
+          of what can be achieved through perseverance and a never-give-up
+          attitude. Each challenge I overcome reinforces my belief that growth
+          and learning come from persistence, and the sense of accomplishment I
+          feel when I master a new concept or skill is unparalleled.
+        </p>
+        <p>
+          I’m driven by the desire to create things that make a real difference,
+          even if it’s just for one person. Whether it’s a tool that simplifies
+          someone’s day, a website that makes you smile, or a solution that
+          addresses a specific need, I believe in the power of technology to
+          positively impact lives. I love how coding allows me to bring ideas to
+          life, starting from a blank slate and building something meaningful.
+        </p>
+        <p>
+          As I continue my journey as a developer, I’m excited to keep learning,
+          tackle new challenges, and contribute to projects that have a tangible
+          impact. My goal is to combine creativity, technical skill, and a
+          passion for problem-solving to create solutions that make the world a
+          little better, one line of code at a time.
+        </p>
+      </article>
+    </main>
     <footer></footer>
     <script src="scripts/loadHeaderFooter.js"></script>
   </body>
