begin building projects page

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     <header></header>
     <main>
       <section class="grid-container">
-        <div class="grid-item item1">
-          <a href="projects.html">
-            <h3>Projects</h3>
-          </a>
+        <div class="grid-item item1" id="projects-link">
+          <h3>Projects</h3>
+          <div class="project-preview">
+            <a href="projects.html?project=nc-news">NC-News</a><br />
+            <a href="projects.html?project=ekans">Ekans</a><br />
+            <a href="projects.html">View all...</a>
+          </div>
         </div>
         <div class="grid-item item2">
           <a href="about.html">
