--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,104 @@
   </head>
   <body>
     <header></header>
+    <main>
+      <section class="project-grid">
+        <div class="project-card" id="nc-news">
+          <img src="./images/nc-news.png" alt="NC-News home page" />
+          <h3>NC-News</h3>
+          <div class="project-details">
+            <p>
+              NC-News is a social news aggregation, web content rating and
+              discussion website. It features articles which are divided into
+              topics, and each article has user-curated ratings from upvotes and
+              downvotes using its back-end API. Users can also add comments
+              about an article and toggle dark-mode on and off.
+            </p>
+            <p>
+              <a href="https://danielle-nc-news.netlify.app/"
+                >Click here to visit the deployed website,
+              </a>
+              <a href="https://github.com/DaniDaws/be-nc-news"
+                >here to view the back-end on GitHub,
+              </a>
+              <a href="https://github.com/DaniDaws/fe-nc-news"
+                >or here to see the front-end on GitHub!</a
+              >
+            </p>
+            <p>Tech Stack:</p>
+            <ul>
+              <li>JavaScript</li>
+              <li>Node.js</li>
+              <li>Express.js</li>
+              <li>PostgreSQL</li>
+              <li>Jest</li>
+              <li>React.js</li>
+              <li>Render</li>
+              <li>SupaBase</li>
+              <li>Netlify</li>
+            </ul>
+          </div>
+        </div>
+        <div class="project-card" id="ekans">
+          <img src="./images/ekans.png" alt="Ekans gameplay" />
+          <h3>Ekans</h3>
+          <div class="project-details">
+            <p>
+              Welcome to Ekans, a unique twist on the classic Snake game.
+              Developed using Godot and GDScript, Ekans reverses the traditional
+              mechanics of Snake by starting the player with a fully grown snake
+              that shrinks as it eats food. As the snake shrinks, it drops
+              obstacles that clutter the map, creating deadly traps that
+              increase the difficulty.
+            </p>
+            <p>Features of Ekans:</p>
+            <ul>
+              <li>
+                Reverse Snake Dynamics - Starts with a fully grown snake that
+                shrinks when eating food, reversing traditional Snake mechanics
+                for a unique gameplay experience.
+              </li>
+              <li>
+                Dynamic Hazard Generation - Shrinking snake leaves behind
+                hazardous obstacles, adding strategic depth and increasing
+                difficulty as the game progresses.
+              </li>
+              <li>
+                Intuitive and Responsive Controls - Smooth and responsive
+                controls ensure seamless gameplay and easy navigation, appealing
+                to a wide range of players.
+              </li>
+              <li>
+                Escalating Difficulty - Game complexity increases as obstacles
+                clutter the play area, maintaining player engagement with new
+                challenges.
+              </li>
+              <li>
+                Mobile Optimization - Optimized for mobile performance,
+                providing a smooth gaming experience on the go with a dedicated
+                mobile version.
+              </li>
+              <li>
+                Secure Firebase Authentication - Uses Firebase for robust user
+                authentication, leveraging GDScript for secure and efficient
+                user management.
+              </li>
+            </ul>
+            <p>Tech Stack:</p>
+            <ul>
+              <li>Godot</li>
+              <li>GDScript</li>
+              <li>Firebase</li>
+              <li>Android SDK</li>
+              <li>Adobe Illustrator</li>
+            </ul>
+          </div>
+      
+      </section>
+    </main>
     <footer></footer>
     <script src="scripts/loadHeaderFooter.js"></script>
+    <script src="scripts/main.js"></script>
+    <script src="scripts/projects.js"></script>
   </body>
 </html>
