add ekans demo video

--- a/projects.html
+++ b/projects.html
@@ -92,6 +92,7 @@
                 user management.
               </li>
             </ul>
+            <video src="other-media/ekans-demo.mp4" controls>Video not supported</video>
             <p>Tech Stack:</p>
             <ul>
               <li>Godot</li>
