make header link to index.html

--- a/header.html
+++ b/header.html
@@ -6,7 +6,9 @@
     <li><a href="northcoders.html">Northcoders</a></li>
   </ul>
 </nav>
-<div class="header-content">
-  <h1>Danielle Dawson</h1>
-  <h2>Junior Full-Stack Software Developer</h2>
-</div>
+<a href="index.html" class="header-link">
+  <div class="header-content">
+    <h1>Danielle Dawson</h1>
+    <h2>Junior Full-Stack Software Developer</h2>
+  </div>
+</a>
