--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,9 @@
 <footer>
+  <a href="https://github.com/DaniDaws" target="_blank">
+    <img src="images/github-dark.png" />
+  </a>
+  <a href="https://www.linkedin.com/in/danielle-d-7936232a2/" target="_blank">
+    <img src="images/linkedin-dark.png" />
+  </a>
   <p>&copy; 2024 Danielle Dawson. All rights reserved.</p>
 </footer>
