--- a/header.html
+++ b/header.html
@@ -12,3 +12,4 @@
     <h2>Junior Full-Stack Software Developer</h2>
   </div>
 </a>
+<img src="images/moon.png" id="theme-toggle" alt="Toggle Dark Mode" />
