adds two new grid items to home page and adds missing script to existing pages

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
             <h3>Northcoders</h3>
           </a>
         </div>
+        <div class="grid-item item5">
+          <a href="code-first-girls.html">
+            <h3>Code First Girls</h3>
+          </a>
+        </div>
+        <div class="grid-item item6">
+          <a href="codecademy.html">
+            <h3>Codecademy</h3>
+          </a>
+        </div>
         <div class="grid-item item4">
           <h3>More Info</h3>
           <div class="additional-info">
