--- a/about.html
+++ b/about.html
@@ -49,5 +49,6 @@
     </main>
     <footer></footer>
     <script src="scripts/loadHeaderFooter.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
