--- a/northcoders.html
+++ b/northcoders.html
@@ -57,5 +57,6 @@
 
     <footer></footer>
     <script src="scripts/loadHeaderFooter.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
