writes code-first-girls.html

--- a/code-first-girls.html
+++ b/code-first-girls.html
@@ -8,6 +8,37 @@
     <link rel="stylesheet" href="styles/article.css" />
   </head>
   <body>
+    <header></header>
+    <main>
+      <article class="cfg-degree-info">
+        <h2>Code First Girls Degree - Software Engineering Career Pathway</h2>
+        <p>
+          I'm thrilled to share that I have been accepted into the
+          <strong>Code First Girls Degree</strong> program, specializing in the
+          <strong>Software Engineering Career Pathway</strong>! This 16-week
+          intensive course is an incredible opportunity to further develop my
+          skills and knowledge in software engineering. The program is designed
+          to equip women with the technical expertise and confidence needed to
+          thrive in the tech industry, covering key areas such as programming,
+          web development, databases, and more.
+        </p>
+        <br />
+        <p>
+          Although the course has just begun, I am already excited about the
+          journey ahead. Over the next few months, I'll be diving deep into a
+          comprehensive curriculum that blends theory with hands-on projects,
+          working alongside industry experts and like-minded peers. This
+          experience will undoubtedly shape my career in tech, and I can't wait
+          to share more updates and insights as I progress through the course.
+        </p>
+        <br />
+        <p>
+          Stay tuned for more information about my projects, what I’m learning,
+          and the exciting challenges I’ll be tackling as part of this program!
+        </p>
+      </article>
+    </main>
+    <footer></footer>
     <script src="scripts/loadHeaderFooter.js"></script>
     <script src="scripts/main.js"></script>
   </body>
