--- a/northcoders.html
+++ b/northcoders.html
@@ -15,8 +15,9 @@
           <h2>My Northcoders Journey</h2>
         </header>
         <p>
-          I recently completed the 13-week Full-Stack Software Development
-          Bootcamp at Northcoders, a program that has truly transformed my
+          I recently completed the 13-week
+          <strong>Software Development Bootcamp</strong> at
+          <strong>Northcoders</strong>, a program that has truly transformed my
           approach to coding and problem-solving. Northcoders is renowned for
           its intensive, hands-on approach to learning, and the bootcamp did not
           disappoint. Over the course of the program, I immersed myself in both
