--- a/codecademy.html
+++ b/codecademy.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles/article.css" />
   </head>
   <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
     <script src="scripts/loadHeaderFooter.js"></script>
     <script src="scripts/main.js"></script>
   </body>
