--- a/header.html
+++ b/header.html
@@ -4,6 +4,8 @@
     <li><a href="projects.html">Projects</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="northcoders.html">Northcoders</a></li>
+    <li><a href="code-first-girls.html">Code First Girls</a></li>
+    <li><a href="codecademy.html">Codecademy</a></li>
   </ul>
 </nav>
 <a href="index.html" class="header-link">
