add text and certificates to codecademy.html, add certificates folder to images folder

--- a/codecademy.html
+++ b/codecademy.html
@@ -6,12 +6,135 @@
     <title>Danielle Dawson - Codecademy</title>
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/article.css" />
+    <link rel="stylesheet" href="styles/lightbox.css" />
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <section>
+        <article class="codecademy-info">
+          <h2>My Codecademy Journey</h2>
+          <p>
+            I'm excited to celebrate my first code-iversary with Codecademy! 🎉
+            It's been an incredible year of growth and learning, and it all
+            started with Python. Codecademy has been a cornerstone of my coding
+            journey, helping me develop a solid foundation in programming and
+            beyond.
+          </p>
+          <p>
+            Currently, I'm working through the Full-Stack Engineer Career
+            Pathway, and I'm 37% of the way through. There's still a lot to
+            learn, but I’m loving every minute of it!
+          </p>
+          <div class="progress-container">
+            <label for="progress">Full-Stack Engineer Pathway Progress:</label>
+            <progress id="progress" value="37" max="100">37%</progress>
+          </div>
+        </article>
+
+        <article class="certificates">
+          <h3>My Codecademy Certificates</h3>
+          <div class="certificates-grid">
+            <a href="images/certificates/python.png" class="lightbox">
+              <img
+                src="images/certificates/python.png"
+                alt="Learn Python 3 Certificate"
+              />
+            </a>
+            <a
+              href="images/certificates/intermediate-python.png"
+              class="lightbox"
+            >
+              <img
+                src="images/certificates/intermediate-python.png"
+                alt="Intermediate Python 3 Certificate"
+              />
+            </a>
+            <a href="images/certificates/advanced-python.png" class="lightbox">
+              <img
+                src="images/certificates/advanced-python.png"
+                alt="Advanced Python 3 Certificate"
+              />
+            </a>
+            <a
+              href="images/certificates/build-chatbots-with-python.png"
+              class="lightbox"
+            >
+              <img
+                src="images/certificates/build-chatbots-with-python.png"
+                alt="Build Chatbots with Python Certificate"
+              />
+            </a>
+            <a
+              href="images/certificates/python-for-data-science.png"
+              class="lightbox"
+            >
+              <img
+                src="images/certificates/python-for-data-science.png"
+                alt="Python for Data Science Certificate"
+              />
+            </a>
+            <a
+              href="images/certificates/math-for-data-science.png"
+              class="lightbox"
+            >
+              <img
+                src="images/certificates/math-for-data-science.png"
+                alt="Fundamental Math for Data Science Certificate"
+              />
+            </a>
+            <a href="images/certificates/javascript.png" class="lightbox">
+              <img
+                src="images/certificates/javascript.png"
+                alt="Learn JavaScript Certificate"
+              />
+            </a>
+            <a href="images/certificates/html.png" class="lightbox">
+              <img
+                src="images/certificates/html.png"
+                alt="Learn HTML Certificate"
+              />
+            </a>
+            <a
+              href="images/certificates/html-fundamentals.png"
+              class="lightbox"
+            >
+              <img
+                src="images/certificates/html-fundamentals.png"
+                alt="Learn HTML Fundamentals Certificate"
+              />
+            </a>
+            <a href="images/certificates/semantic-html.png" class="lightbox">
+              <img
+                src="images/certificates/semantic-html.png"
+                alt="Learn Semantic HTML Certificate"
+              />
+            </a>
+            <a href="images/certificates/html-tables.png" class="lightbox">
+              <img
+                src="images/certificates/html-tables.png"
+                alt="Learn HTML Tables Certificate"
+              />
+            </a>
+            <a href="images/certificates/html-forms.png" class="lightbox">
+              <img
+                src="images/certificates/html-forms.png"
+                alt="Learn HTML Forms Certificate"
+              />
+            </a>
+            <a href="images/certificates/css.png" class="lightbox">
+              <img
+                src="images/certificates/css.png"
+                alt="Learn CSS Certificate"
+              />
+            </a>
+          </div>
+        </article>
+      </section>
+    </main>
     <footer></footer>
     <script src="scripts/loadHeaderFooter.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/lightbox.js"></script>
   </body>
 </html>
