style codecademy certificates and add second article to code first girls page

--- a/code-first-girls.html
+++ b/code-first-girls.html
@@ -37,6 +37,40 @@
           and the exciting challenges I’ll be tackling as part of this program!
         </p>
       </article>
+      <article class="cfg-kickstarter-info">
+        <h2>Kickstarter: Introduction to Python & Apps</h2>
+        <p>
+          At the end of 2023, I completed the
+          <strong>Introduction to Python & Apps</strong> Kickstarter course
+          offered by Code First Girls. This 8-week course was an incredible
+          experience where I learned the fundamentals of programming through
+          hands-on problem-solving in Python.
+        </p>
+        <p>
+          The course covered a wide range of topics, from object-oriented
+          programming and logic to collaboratively building a web application.
+          Here are some of the key modules:
+        </p>
+        <ul>
+          <li>Module 1: Python Basics: Data Types and Variables</li>
+          <li>
+            Module 2: Problem Solving: Input, Loops, and Functions with Turtle
+          </li>
+          <li>Module 3: Decision Making: Logic and If Statements</li>
+          <li>Module 4: Lists and Dictionaries</li>
+          <li>Module 5: Files, Pip, and APIs</li>
+          <li>Module 6: Building Your App: Project Planning and Projects</li>
+          <li>Module 7: Building Your App: Project Work Time</li>
+          <li>Module 8: Project Presentations</li>
+        </ul>
+        <p>
+          The course concluded with an exciting group project where we built and
+          presented our own web applications. Working in a team to develop a
+          project from start to finish was an amazing learning experience. I had
+          so much fun, and it was a brilliant way to apply everything we had
+          learned throughout the course!
+        </p>
+      </article>
     </main>
     <footer></footer>
     <script src="scripts/loadHeaderFooter.js"></script>
