add certificate for kickstarter course to code first girls page

--- a/code-first-girls.html
+++ b/code-first-girls.html
@@ -70,6 +70,20 @@
           so much fun, and it was a brilliant way to apply everything we had
           learned throughout the course!
         </p>
+        <div class="certificate">
+          <img
+            src="images/certificates/python-kickstarter.png"
+            alt="Python Kickstarter Course Certificate"
+            class="certificate-thumbnail"
+          />
+          <p><strong>Kickstarter Course Certificate</strong></p>
+        </div>
+
+        <div id="certificateModal" class="modal">
+          <span class="close">&times;</span>
+          <img class="modal-content" id="certificateImage" />
+          <div class="modal-caption">Kickstarter Course Certificate</div>
+        </div>
       </article>
     </main>
     <footer></footer>
