--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Danielle Dawson - Projects</title>
+    <link rel="icon" href="images/avatar.png" type="image/png" />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/article.css" />
   </head>
