add northcoders certificate

--- a/northcoders.html
+++ b/northcoders.html
@@ -54,6 +54,20 @@
           left me eager to continue learning, to tackle new challenges, and to
           contribute meaningfully to any team I’m a part of.
         </p>
+        <div class="certificate">
+          <img
+            src="images/certificates/northcoders.png"
+            alt="Northcoders Bootcamp Certificate"
+            class="certificate-thumbnail"
+          />
+          <p><strong>Northcoders Bootcamp Certificate</strong></p>
+        </div>
+
+        <div id="certificateModal" class="modal">
+          <span class="close">&times;</span>
+          <img class="modal-content" id="certificateImage" />
+          <div class="modal-caption">Northcoders Bootcamp Certificate</div>
+        </div>
       </article>
     </main>
 
